versions/0.8.1/_sources/refs/_aws-cdk_aws-datapipeline.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"HPje6MbRPP1DOMKUGvsNHtpZd2L3bE0QIuxsKLD9KYM="}

@aws-cdk/aws-datapipeline
=========================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/datapipeline/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:datapipeline:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="datapipeline" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>datapipeline</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:datapipeline:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='datapipeline', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-datapipeline/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-datapipeline@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-datapipeline": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-datapipeline@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-datapipeline/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-datapipeline@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-datapipeline": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-datapipeline@0.8.1



.. mdinclude:: ./__aws-cdk_aws-datapipeline.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-datapipeline


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-datapipeline.cloudformation

PipelineResource
~~~~~~~~~~~~~~~~

.. py:class:: PipelineResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource;

      .. code-tab:: javascript

         const { cloudformation.PipelineResource } = require('@aws-cdk/aws-datapipeline');

      .. code-tab:: typescript

         import { cloudformation.PipelineResource } from '@aws-cdk/aws-datapipeline';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PipelineResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PipelineResource``
   :type properties: :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: FieldProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.FieldProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.FieldProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.FieldProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: key

         ``PipelineResource.FieldProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects-fields.html#cfn-datapipeline-pipeline-pipelineobjects-fields-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: refValue

         ``PipelineResource.FieldProperty.RefValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects-fields.html#cfn-datapipeline-pipeline-pipelineobjects-fields-refvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: stringValue

         ``PipelineResource.FieldProperty.StringValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects-fields.html#cfn-datapipeline-pipeline-pipelineobjects-fields-stringvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ParameterAttributeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.ParameterAttributeProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ParameterAttributeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ParameterAttributeProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: key

         ``PipelineResource.ParameterAttributeProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parameterobjects-attributes.html#cfn-datapipeline-pipeline-parameterobjects-attribtues-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stringValue

         ``PipelineResource.ParameterAttributeProperty.StringValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parameterobjects-attributes.html#cfn-datapipeline-pipeline-parameterobjects-attribtues-stringvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ParameterObjectProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.ParameterObjectProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ParameterObjectProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ParameterObjectProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: attributes

         ``PipelineResource.ParameterObjectProperty.Attributes``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parameterobjects.html#cfn-datapipeline-pipeline-parameterobjects-attributes


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.ParameterAttributeProperty`


      .. py:attribute:: id

         ``PipelineResource.ParameterObjectProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parameterobjects.html#cfn-datapipeline-pipeline-parameterobjects-id


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ParameterValueProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.ParameterValueProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.ParameterValueProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.ParameterValueProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: id

         ``PipelineResource.ParameterValueProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parametervalues.html#cfn-datapipeline-pipeline-parametervalues-id


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: stringValue

         ``PipelineResource.ParameterValueProperty.StringValue``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-parametervalues.html#cfn-datapipeline-pipeline-parametervalues-stringvalue


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: PipelineObjectProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.PipelineObjectProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.PipelineObjectProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.PipelineObjectProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: fields

         ``PipelineResource.PipelineObjectProperty.Fields``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects.html#cfn-datapipeline-pipeline-pipelineobjects-fields


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.FieldProperty`


      .. py:attribute:: id

         ``PipelineResource.PipelineObjectProperty.Id``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects.html#cfn-datapipeline-pipeline-pipelineobjects-id


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``PipelineResource.PipelineObjectProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelineobjects.html#cfn-datapipeline-pipeline-pipelineobjects-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: PipelineTagProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResource.PipelineTagProperty;

         .. code-tab:: javascript

            // cloudformation.PipelineResource.PipelineTagProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.PipelineResource.PipelineTagProperty } from '@aws-cdk/aws-datapipeline';





      .. py:attribute:: key

         ``PipelineResource.PipelineTagProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelinetags.html#cfn-datapipeline-pipeline-pipelinetags-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: value

         ``PipelineResource.PipelineTagProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-datapipeline-pipeline-pipelinetags.html#cfn-datapipeline-pipeline-pipelinetags-value


         :type: string or :py:class:`@aws-cdk/cdk.Token`



PipelineResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PipelineResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.datapipeline.cloudformation.PipelineResourceProps;

      .. code-tab:: javascript

         // cloudformation.PipelineResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.PipelineResourceProps } from '@aws-cdk/aws-datapipeline';





   .. py:attribute:: pipelineName

      ``AWS::DataPipeline::Pipeline.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: parameterObjects

      ``AWS::DataPipeline::Pipeline.ParameterObjects``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-parameterobjects


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.ParameterObjectProperty`


   .. py:attribute:: activate

      ``AWS::DataPipeline::Pipeline.Activate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-activate


      :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::DataPipeline::Pipeline.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: parameterValues

      ``AWS::DataPipeline::Pipeline.ParameterValues``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-parametervalues


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.ParameterValueProperty` or undefined


   .. py:attribute:: pipelineObjects

      ``AWS::DataPipeline::Pipeline.PipelineObjects``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-pipelineobjects


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.PipelineObjectProperty` or undefined


   .. py:attribute:: pipelineTags

      ``AWS::DataPipeline::Pipeline.PipelineTags``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-datapipeline-pipeline.html#cfn-datapipeline-pipeline-pipelinetags


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-datapipeline.cloudformation.PipelineResource.PipelineTagProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-datapipeline

